[Win] MSVC reports "DumpRenderTree.cpp(633): error C2362: initialization of 'length' is skipped by 'goto exit'" with /std:c++20 https://bugs.webkit.org/show_bug.cgi?id=234503

Reviewed by Don Olmstead.

* DumpRenderTree/win/DumpRenderTree.cpp:
(dumpHistoryItem): Removed goto statements. Use std::unique_ptr for SAFEARRAY.


Canonical link: https://commits.webkit.org/245449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287297 268f45cc-cd09-0410-ab3c-d52691b4dbfc